2005-11-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcalendar.c (gtk_calendar_class_init), (gtk_calendar_init),
	(gtk_calendar_set_month_prev), (gtk_calendar_set_month_next),
	(gtk_calendar_set_year_prev), (gtk_calendar_set_year_next),
	(gtk_calendar_main_button), (gtk_calendar_select_month),
	(gtk_calendar_button_press), (gtk_calendar_paint_arrow),
	(gtk_calendar_key_press), (gtk_calendar_set_property),
	(gtk_calendar_get_property): replaced style properties 'min-year' and
	'max-year' with corresponding new class properties
	N#19283, N#19648

2005-11-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_button_release,
	gtk_tree_view_motion_bin_window): Free leaked GtkTreePaths
	N#20677

2005-11-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Making the builtin stock icons available again.

	* gtk/gtkiconfactory.c: Revert the previous stock icons patch.
	* gtk/gtkicontheme.c (theme_lookup_icons): Consider builtin stock
	icons only as final resort (instead of primary candidates in the
	'hicolor' theme) to avoid the extra memory consumption caused by icon
	registration.
	N#20725, N#21039

2005-11-01  Michael Natterer  <mitch@imendio.com>

	* gdk/x11/gdkdnd-x11.c: removed redundant "const" from the
	"xdnd_filters" array definition, effectively reverting this file
	to upstream.

2005-10-28  Kristian Rietveld  <kris@imendio.com>

	Merged gtktreeview.c changes:

    2005-06-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_real_start_interactive_search):
	Don't crash if search_window is NULL.  (#304914, Victor Osadci,
	testcase by Olaf Vitters)

    2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_bin_expose): Draw the
	background of rows insensitive when the treeview is insensitive.
	(pointed out by Billy Biggs)

    2005-05-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_draw_arrow): Make expanders