@@ -204,15 +204,6 @@ AC_ARG_ENABLE(visibility,
               [AC_HELP_STRING([--disable-visibility],
                               [don't use ELF visibility attributes])],,
               [enable_visibility=yes])
-# Modification for Nokia 770 to disable keyboard shortcuts
-AC_ARG_ENABLE(shortcuts,
-	      [AC_HELP_STRING([--disable-shortcuts],
-	                      [disable keyboard shortcuts])],,
-	      [enable_shortcuts=yes])
-
-if test "x$enable_shortcuts" = "xno"; then
-  GTK_EXTRA_CFLAGS="$GTK_EXTRA_CFLAGS -DDISABLE_KEYBOARD_SHORTCUTS"
-fi;
 
 AC_ARG_WITH(xinput,
             [AC_HELP_STRING([--with-xinput=@<:@no/yes@:>@], [support XInput])])
